--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -50,16 +50,31 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AdministrarUsuarioscs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="AdministrarUsuarioscs.Designer.cs">
+      <DependentUpon>AdministrarUsuarioscs.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MenuPrincipal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuPrincipal.Designer.cs">
+      <DependentUpon>MenuPrincipal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuPrincipal.resx">
+      <DependentUpon>MenuPrincipal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -85,11 +100,19 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Imagenes\agregar.png" />
     <Content Include="Imagenes\boquillas.png" />
+    <Content Include="Imagenes\carrito.png" />
+    <Content Include="Imagenes\estadisticas.png" />
     <Content Include="Imagenes\fondo.png" />
     <Content Include="Imagenes\fondo2.png" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="Imagenes\potencializa.png" />
+    <None Include="Resources\corneta.png" />
+    <None Include="Resources\lupa.png" />
+    <None Include="Resources\estadisticas.png" />
+    <None Include="Resources\carrito.png" />
+    <None Include="Resources\agregar.png" />
     <None Include="Resources\logo.png" />
     <None Include="Resources\potencializa.png" />
     <None Include="Resources\boquillas.png" />
