--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -56,6 +56,12 @@
     <Compile Include="AdministrarUsuarioscs.Designer.cs">
       <DependentUpon>AdministrarUsuarioscs.cs</DependentUpon>
     </Compile>
+    <Compile Include="CambiarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="CambiarUsuario.Designer.cs">
+      <DependentUpon>CambiarUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -70,6 +76,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="AdministrarUsuarioscs.resx">
+      <DependentUpon>AdministrarUsuarioscs.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="CambiarUsuario.resx">
+      <DependentUpon>CambiarUsuario.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -103,11 +115,14 @@
     <Content Include="Imagenes\agregar.png" />
     <Content Include="Imagenes\boquillas.png" />
     <Content Include="Imagenes\carrito.png" />
+    <Content Include="Imagenes\casita.jpeg" />
     <Content Include="Imagenes\estadisticas.png" />
     <Content Include="Imagenes\fondo.png" />
     <Content Include="Imagenes\fondo2.png" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="Imagenes\potencializa.png" />
+    <None Include="Resources\basura.jpeg" />
+    <None Include="Resources\casita.jpeg" />
     <None Include="Resources\corneta.png" />
     <None Include="Resources\lupa.png" />
     <None Include="Resources\estadisticas.png" />
