--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -62,11 +62,23 @@
     <Compile Include="CambiarUsuario.Designer.cs">
       <DependentUpon>CambiarUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Configuracion.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Configuracion.Designer.cs">
+      <DependentUpon>Configuracion.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MenuAgregarUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MenuAgregarUsuario.Designer.cs">
+      <DependentUpon>MenuAgregarUsuario.cs</DependentUpon>
     </Compile>
     <Compile Include="MenuPrincipal.cs">
       <SubType>Form</SubType>
@@ -76,14 +88,26 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioAgregado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UsuarioAgregado.Designer.cs">
+      <DependentUpon>UsuarioAgregado.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="AdministrarUsuarioscs.resx">
       <DependentUpon>AdministrarUsuarioscs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CambiarUsuario.resx">
       <DependentUpon>CambiarUsuario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Configuracion.resx">
+      <DependentUpon>Configuracion.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MenuAgregarUsuario.resx">
+      <DependentUpon>MenuAgregarUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MenuPrincipal.resx">
       <DependentUpon>MenuPrincipal.cs</DependentUpon>
@@ -98,6 +122,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UsuarioAgregado.resx">
+      <DependentUpon>UsuarioAgregado.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -119,8 +146,10 @@
     <Content Include="Imagenes\estadisticas.png" />
     <Content Include="Imagenes\fondo.png" />
     <Content Include="Imagenes\fondo2.png" />
+    <Content Include="Imagenes\help.png" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="Imagenes\potencializa.png" />
+    <None Include="Resources\help.png" />
     <None Include="Resources\basura.jpeg" />
     <None Include="Resources\casita.jpeg" />
     <None Include="Resources\corneta.png" />
