--- a/MaheduBueno/App.config
+++ b/MaheduBueno/App.config
@@ -2,6 +2,10 @@
 <configuration>
     <configSections>
     </configSections>
+    <connectionStrings>
+        <add name="MaheduBueno.Properties.Settings.Valor" connectionString="server=localhost;user id=root;port=3308;database=mahedubueno"
+            providerName="MySql.Data.MySqlClient" />
+    </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
