--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -104,6 +104,18 @@
     <Compile Include="AgregarProductos.Designer.cs">
       <DependentUpon>AgregarProductos.cs</DependentUpon>
     </Compile>
+    <Compile Include="Ayuda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ayuda.Designer.cs">
+      <DependentUpon>Ayuda.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Ayuda2.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Ayuda2.Designer.cs">
+      <DependentUpon>Ayuda2.cs</DependentUpon>
+    </Compile>
     <Compile Include="BuscarProductos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -116,17 +128,53 @@
     <Compile Include="CambiarUsuario.Designer.cs">
       <DependentUpon>CambiarUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Camposllenos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Camposllenos.Designer.cs">
+      <DependentUpon>Camposllenos.cs</DependentUpon>
+    </Compile>
     <Compile Include="Configuracion.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Configuracion.Designer.cs">
       <DependentUpon>Configuracion.cs</DependentUpon>
     </Compile>
+    <Compile Include="ContraIncorrecta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ContraIncorrecta.Designer.cs">
+      <DependentUpon>ContraIncorrecta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EditarProductoAlerta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EditarProductoAlerta.Designer.cs">
+      <DependentUpon>EditarProductoAlerta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ErrorProductoAlerta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ErrorProductoAlerta.Designer.cs">
+      <DependentUpon>ErrorProductoAlerta.cs</DependentUpon>
+    </Compile>
     <Compile Include="ErrorRecopilar.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="ErrorRecopilar.Designer.cs">
       <DependentUpon>ErrorRecopilar.cs</DependentUpon>
+    </Compile>
+    <Compile Include="ErrorVentaAlerta.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ErrorVentaAlerta.Designer.cs">
+      <DependentUpon>ErrorVentaAlerta.cs</DependentUpon>
+    </Compile>
+    <Compile Include="EstadisticasError.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="EstadisticasError.Designer.cs">
+      <DependentUpon>EstadisticasError.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -171,6 +219,18 @@
     <Compile Include="MessageBox4.Designer.cs">
       <DependentUpon>MessageBox4.cs</DependentUpon>
     </Compile>
+    <Compile Include="MessageBox5.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MessageBox5.Designer.cs">
+      <DependentUpon>MessageBox5.cs</DependentUpon>
+    </Compile>
+    <Compile Include="NoProducto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NoProducto.Designer.cs">
+      <DependentUpon>NoProducto.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UsuarioAgregado.cs">
@@ -185,17 +245,41 @@
     <EmbeddedResource Include="AgregarProductos.resx">
       <DependentUpon>AgregarProductos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Ayuda.resx">
+      <DependentUpon>Ayuda.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Ayuda2.resx">
+      <DependentUpon>Ayuda2.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="BuscarProductos.resx">
       <DependentUpon>BuscarProductos.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="CambiarUsuario.resx">
       <DependentUpon>CambiarUsuario.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Camposllenos.resx">
+      <DependentUpon>Camposllenos.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Configuracion.resx">
       <DependentUpon>Configuracion.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ContraIncorrecta.resx">
+      <DependentUpon>ContraIncorrecta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EditarProductoAlerta.resx">
+      <DependentUpon>EditarProductoAlerta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ErrorProductoAlerta.resx">
+      <DependentUpon>ErrorProductoAlerta.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ErrorRecopilar.resx">
       <DependentUpon>ErrorRecopilar.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ErrorVentaAlerta.resx">
+      <DependentUpon>ErrorVentaAlerta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="EstadisticasError.resx">
+      <DependentUpon>EstadisticasError.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
@@ -217,6 +301,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MessageBox4.resx">
       <DependentUpon>MessageBox4.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MessageBox5.resx">
+      <DependentUpon>MessageBox5.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NoProducto.resx">
+      <DependentUpon>NoProducto.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
