Ahora funciona el buscar productos :D

--- a/MaheduBueno/App.config
+++ b/MaheduBueno/App.config
@@ -3,7 +3,10 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="MaheduBueno.Properties.Settings.Valor" connectionString="server=localhost;user id=root;port=3308;database=mahedubueno" providerName="MySql.Data.MySqlClient" />
+        <add name="MaheduBueno.Properties.Settings.conexion" connectionString="SERVER=mahedu.database.windows.net;DATABASE=mahedu;USER ID=K-Dev;PASSWORD=NEBRLURIMI.1"
+            providerName="MySql.Data.MySqlClient" />
+        <add name="MaheduBueno.Properties.Settings.conexion1" connectionString="Data Source=mahedu.database.windows.net;Initial Catalog=Mahedu;Persist Security Info=True;User ID=K-Dev;Password=NEBRLURIMI.1"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
