--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -182,6 +182,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MaheduDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MaheduDataSet.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ManejadorBD.cs" />
     <Compile Include="MenuAgregarUsuario.cs">
       <SubType>Form</SubType>
@@ -321,6 +326,17 @@
     <EmbeddedResource Include="UsuarioAgregado.resx">
       <DependentUpon>UsuarioAgregado.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="MaheduDataSet.xsc">
+      <DependentUpon>MaheduDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="MaheduDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MaheduDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MaheduDataSet.xss">
+      <DependentUpon>MaheduDataSet.xsd</DependentUpon>
+    </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
