form administrar usuario

--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -187,6 +187,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MaheduDataSet.xsd</DependentUpon>
     </Compile>
+    <Compile Include="MaheduDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MaheduDataSet1.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ManejadorBD.cs" />
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
@@ -354,6 +359,17 @@
     </None>
     <None Include="MaheduDataSet.xss">
       <DependentUpon>MaheduDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="MaheduDataSet1.xsc">
+      <DependentUpon>MaheduDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="MaheduDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MaheduDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MaheduDataSet1.xss">
+      <DependentUpon>MaheduDataSet1.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
