--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -228,6 +228,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MaheduDataSet7.xsd</DependentUpon>
     </Compile>
+    <Compile Include="MaheduDataSet8.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>MaheduDataSet8.xsd</DependentUpon>
+    </Compile>
     <Compile Include="ManejadorBD.cs" />
     <Compile Include="Menu.cs">
       <SubType>Form</SubType>
@@ -476,6 +481,17 @@
     </None>
     <None Include="MaheduDataSet7.xss">
       <DependentUpon>MaheduDataSet7.xsd</DependentUpon>
+    </None>
+    <None Include="MaheduDataSet8.xsc">
+      <DependentUpon>MaheduDataSet8.xsd</DependentUpon>
+    </None>
+    <None Include="MaheduDataSet8.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>MaheduDataSet8.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="MaheduDataSet8.xss">
+      <DependentUpon>MaheduDataSet8.xsd</DependentUpon>
     </None>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
