--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -182,6 +182,12 @@
     <Compile Include="ErrorVentaAlerta.Designer.cs">
       <DependentUpon>ErrorVentaAlerta.cs</DependentUpon>
     </Compile>
+    <Compile Include="Estadisticas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Estadisticas.Designer.cs">
+      <DependentUpon>Estadisticas.cs</DependentUpon>
+    </Compile>
     <Compile Include="EstadisticasError.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -380,6 +386,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ErrorVentaAlerta.resx">
       <DependentUpon>ErrorVentaAlerta.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Estadisticas.resx">
+      <DependentUpon>Estadisticas.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="EstadisticasError.resx">
       <DependentUpon>EstadisticasError.cs</DependentUpon>
@@ -593,6 +602,7 @@
     <Content Include="Imagenes\help.png" />
     <Content Include="Imagenes\logo.png" />
     <Content Include="Imagenes\potencializa.png" />
+    <None Include="Resources\fondo3.jpeg" />
     <None Include="Resources\help.png" />
     <None Include="Resources\basura.jpeg" />
     <None Include="Resources\casita.jpeg" />
