--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -140,6 +140,7 @@
     <Compile Include="Camposllenos.Designer.cs">
       <DependentUpon>Camposllenos.cs</DependentUpon>
     </Compile>
+    <Compile Include="clases2\Producto.cs" />
     <Compile Include="Configuracion.cs">
       <SubType>Form</SubType>
     </Compile>
