agregados en administrar productos, funciona el eliminar materia prima

--- a/MaheduBueno/MaheduBueno.csproj
+++ b/MaheduBueno/MaheduBueno.csproj
@@ -140,7 +140,9 @@
     <Compile Include="Camposllenos.Designer.cs">
       <DependentUpon>Camposllenos.cs</DependentUpon>
     </Compile>
+    <Compile Include="clases2\materiaPrima.cs" />
     <Compile Include="clases2\Producto.cs" />
+    <Compile Include="clases2\usuario.cs" />
     <Compile Include="Configuracion.cs">
       <SubType>Form</SubType>
     </Compile>
