--- a/MaheduBueno/App.config
+++ b/MaheduBueno/App.config
@@ -3,9 +3,9 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="MaheduBueno.Properties.Settings.conexion" connectionString="SERVER=mahedu.database.windows.net;DATABASE=mahedu;USER ID=K-Dev;PASSWORD=NEBRLURIMI.1"
+        <add name="MaheduBueno.Properties.Settings.conexion" connectionString="SERVER=mahedu2.database.windows.net;DATABASE=mahedu;USER ID=K-Dev;PASSWORD=NEBRLURIMI.1"
             providerName="MySql.Data.MySqlClient" />
-        <add name="MaheduBueno.Properties.Settings.conexion1" connectionString="Data Source=mahedu.database.windows.net;Initial Catalog=Mahedu;Persist Security Info=True;User ID=K-Dev;Password=NEBRLURIMI.1"
+        <add name="MaheduBueno.Properties.Settings.conexion1" connectionString="Data Source=mahedu2.database.windows.net;Initial Catalog=Mahedu;Persist Security Info=True;User ID=K-Dev;Password=NEBRLURIMI.1"
             providerName="System.Data.SqlClient" />
     </connectionStrings>
     <startup> 
